--- a/ExpenseManager/Info.plist
+++ b/ExpenseManager/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo library is used to attach media files to your transactions</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Photo library is used to attach media files to your transactions</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Face ID is used to authenticate user into app</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Your camera is used to attach media files to your transactions</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
